--- a/templates/main.html
+++ b/templates/main.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Ahmed AbouEleyoun</title>
-		<link href="style.css" rel="stylesheet" />
+		<link href="./style.css" rel="stylesheet" />
 	</head>
 	<body>
 		{% include "about.html" %}
-		<script src="script.js"></script>
+		<script src="./script.js"></script>
 	</body>
 </html>
