--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,44 @@
+@import url("./font/JetBrainsMonoNerdFont.css");
+
+* {
+	cursor: text;
+}
+
+html {
+	font-family:
+		JetBrains Mono,
+		monospace;
+}
+
 body {
 	background-color: #000000;
 	color: #a0a0a0;
+	margin: 0;
+	width: 100%;
+	min-height: 100vh;
+	display: flex;
+}
+
+#terminal {
+	background-color: #000000;
+	display: flex;
+	flex-direction: column;
+	padding: 10px;
+	width: 100%;
+}
+
+#output {
+	white-space: pre-wrap;
+	word-wrap: break-word;
+}
+
+#prompt {
+	background-color: transparent;
+	border: none;
+	caret-shape: block;
+	color: #a0a0a0;
+	font-size: 16px;
+	outline: none;
+	padding: 0;
+	width: 100%;
 }
