--- a/templates/main.html
+++ b/templates/main.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Ahmed AbouEleyoun</title>
+		<title>amedoeyes@iris</title>
 		<link href="./style.css" rel="stylesheet" />
 	</head>
 	<body>
-		{% include "about.html" %}
+		{% include "terminal.html" %}
 		<script src="./script.js"></script>
 	</body>
 </html>
