--- a/static/style.css
+++ b/static/style.css
@@ -2,13 +2,10 @@
 
 * {
 	cursor: text;
-	font-size: 20px;
-}
-
-html {
 	font-family:
 		JetBrains Mono,
 		monospace;
+	font-size: 16px;
 }
 
 body {
@@ -47,4 +44,10 @@ a {
 	outline: none;
 	padding: 0;
 	width: 100%;
+}
+
+@media screen and (max-width: 400px) {
+	* {
+		font-size: 12px;
+	}
 }
